--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ace-builds": "^1.37.0",
     "autoprefixer": "^10.4.20",
+    "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-ace": "^13.0.0",
     "react-dom": "^18.3.1",
