--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-ace": "^13.0.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
     "tailwindcss": "^3.4.17"
