--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-ace": "^13.0.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
+    "react-joyride": "^2.9.3",
     "react-router-dom": "^7.0.2",
     "tailwindcss": "^3.4.17"
   },
